--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "interactjs": "^1.10.27"
     }
 }
